# embedded-kf

./: .clang-format  .gitignore  .gitmodules  Doxyfile  LICENSE  README.md  kalman_theory.md  kf_generator.py  pyproject.toml
.github/workflows/: c_unit_tests.yml  docs.yml  docs_upload.yml  format.yml  generator_unit_tests.yml
filter/inc/: kalman.h
filter/src/: kalman.c
filter/test/: CMakeLists.txt  configs.cpp  configs.hpp  main.cpp  matrix_test_util.cpp  matrix_test_util.hpp  test_dummy.cpp  test_kalman_api.cpp  test_kalman_init.cpp  test_kalman_predict.cpp  test_kalman_update.cpp
generator/: c_file_generator.py  file_content_generator.py  file_writer.py  ingestor.py  kf_generator.py  sanitizer.py
generator/e2e_evaluator/: CMakeLists.txt  e2e_simulator.py  e2e_simulator_bindings.py  imu_kf_config_bindings.py  kalman_bindings.py  matrix_types_bindings.py
generator/tests/: simple_filter.json  test_c_file_generator.py  test_file_content_generator.py  test_ingestor.py
generator/tests/samples/: imu_filter.json  simple_filter.json  simple_filter_with_control.json
info/: API.md  CMakeLists.txt  README.md
scripts/: format.py  lint.py  matrix_eval.py  setup.py  test_e2e.py  test_e2e_filter.py  test_filter_generator.py  test_filter_source.py  util.py
